src/objects/CPA_CR__c.object
<CustomObject>
    <fields>
        <fullName>CPA_Project_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PWO</label>
        <referenceTo>CPA_project_work_order__c</referenceTo>
        <relationshipLabel>CRs</relationshipLabel>
        <relationshipName>CRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Count__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efforts_MD__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>IF( ISNULL( num_Estimated_Man_days_of_CR__c ) ,   CPA_Project_Work_Order__r.num_Estimated_Man_days_of_PWO__c  , num_Estimated_Man_days_of_CR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Efforts (MD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Project_End_Date__c</fullName>
        <description>This report created for reporting purpose.</description>
        <formula>IF( ISNULL( dt_CR_End_date__c ) ,  CPA_Project_Work_Order__r.dt_Expected_End_date__c  , dt_CR_End_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Latest_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field created for reporting purpose.</description>
        <label>Is Latest CR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWORFDelta_OtherProcess_Office_Area_E2E__c</fullName>
        <label>Other Process Office Area E2E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWORFDelta_UnileverFinanceBPContactemail__c</fullName>
        <label>Unilever Finance BP/Contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PWO_number__c</fullName>
        <description>PWO ID</description>
        <label>PWO Number*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_impacted__c</fullName>
        <description>Regions covered/being impacted under the CR.</description>
        <label>Region Impacted*</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>auto_Internal_CR_ID__c</fullName>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Internal CR ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>chk_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract_Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_Contract_Excel_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract_Excel_Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_isStandalone_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStandalone CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dat_Accepted_Date__c</fullName>
        <description>Accepted date of CR, This filed will be non editable for ULPM,Vendor ,ULPT and ULFT</description>
        <inlineHelpText>Accepted date of CR,</inlineHelpText>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Cancelled_Date__c</fullName>
        <description>Cancelled date of CR, This filed will be non editable for ULPM,Vendor ,ULPT and ULFT</description>
        <inlineHelpText>Cancelled date of CR,</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Delivered_Date__c</fullName>
        <description>Delivered date of CR, This filed will be non editable for ULPM,Vendor ,ULPT and ULFT</description>
        <inlineHelpText>Delivered date of CR,</inlineHelpText>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Resubmitted_Date__c</fullName>
        <description>Resubmitted date of CR, This filed will be non editable for ULPM,Vendor ,ULPT and ULFT</description>
        <inlineHelpText>Resubmitted date of CR,</inlineHelpText>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Sent_for_Signature_Date__c</fullName>
        <label>Sent for Signature date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Submitted_Date__c</fullName>
        <description>Submission date of CR, This filed will be non editable for ULPM,Vendor ,ULPT and ULFT</description>
        <inlineHelpText>Submission date of CR</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_CR_End_date__c</fullName>
        <description>Date when the project Ends</description>
        <label>CR End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_CR_Start_Date__c</fullName>
        <description>Date when the project commences</description>
        <label>CR Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Date_raised__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date when CR was raised</description>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_PWODelta_Project_Initiation_Date__c</fullName>
        <label>Project Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_PWORFDelta_Expected_go_live_date__c</fullName>
        <label>Expected go-live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_PWORFDelta_Expected_start_date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>em_PWORFDeltaUnileverprojectmanagerEmail__c</fullName>
        <label>Unilever project manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_PWORFDelta_Project_requestor_email__c</fullName>
        <label>Project requestor email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_SMT_group_email__c</fullName>
        <label>SMT group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Budget_Approver_Email__c</fullName>
        <description>Unilever Budget Approver Email</description>
        <label>Unilever Budget Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Content_Approver_Email__c</fullName>
        <description>Unilever Content Approver Email</description>
        <label>Unilever Content Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_VDM_group_email__c</fullName>
        <label>VDM group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fml_Pworf_Clarity_ID__c</fullName>
        <formula>IF(  ISBLANK(txt_Unilever_Reference__c),If(ISBLANK(CPA_Project_Work_Order__r.PWORF_ID__r.txt_Clarity_ID__c), CPA_Project_Work_Order__r.txt_Standalone_PWO_clarity_ID__c ,CPA_Project_Work_Order__r.PWORF_ID__r.txt_Clarity_ID__c ),  txt_Unilever_Reference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fur_PWO_Number__c</fullName>
        <formula>CPA_Project_Work_Order__r.txt_PWO_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fur_Project_Scale__c</fullName>
        <formula>CPA_Project_Work_Order__r.fur_Project_Scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Scale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fur_per_Variance__c</fullName>
        <formula>IF(	AND(num_Varied_Target_Blend_Rate__c &gt; 0,
		(((num_Varied_Target_Blend_Rate__c  - num_Target_Blend_Rate__c )/num_Varied_Target_Blend_Rate__c))&gt;=0),
	((num_Varied_Target_Blend_Rate__c  - num_Target_Blend_Rate__c )/num_Varied_Target_Blend_Rate__c),0
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fur_pworfrecord_type__c</fullName>
        <formula>CPA_Project_Work_Order__r.fur_PWORFRecord_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWORF Reord type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lkp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_budget_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project budget</description>
        <label>Unilever Budget Approver*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_content_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project content</description>
        <label>Unilever Content Approver*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltxta_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltxta_Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mpkl_Change_Record_history__c</fullName>
        <label>Change Record History*</label>
        <picklist>
            <picklistValues>
                <fullName>1st Change</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Change</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mpkl_PWODelta_Billing_Details__c</fullName>
        <label>Billing Details</label>
        <picklist>
            <picklistValues>
                <fullName>Unilever UK Central Resources (UKCR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mpkl_PWODelta_Unilever_Innovation_Area__c</fullName>
        <label>Unilever Innovation Area</label>
        <picklist>
            <picklistValues>
                <fullName>Supply chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mpkl_PWORFDelta_Business_area__c</fullName>
        <label>Business area</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Comms</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>num_Authorisation_charges__c</fullName>
        <description>Charges incurred for introducing or modifying any roles or authorisation to the application system within the scope of the PWO</description>
        <label>Authorisation Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Authorisation_man_days__c</fullName>
        <label>Authorisation Man-Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Contingency_Charges__c</fullName>
        <label>Contingency Charges</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Delta_Efforts__c</fullName>
        <label>Delta Efforts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Discounts__c</fullName>
        <label>Discounts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Effort_Cost__c</fullName>
        <label>num_Effort_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Estimated_Man_days_of_CR__c</fullName>
        <description>Estimated effort required for the project</description>
        <label>Estimated Man-Days of CR*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Estimated_Value_of_CR__c</fullName>
        <description>Estimated cost for the project</description>
        <label>Estimated Value of CR*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Expense_charges_of_CR__c</fullName>
        <description>Expenses incurred under the CR</description>
        <label>Expense Charges of CR*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_ITC_resources_man_days__c</fullName>
        <description>Number of man-days for resources between L3 to L5</description>
        <label>ITC resources (man-days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_On_shore_senior_resources_man_days__c</fullName>
        <description>Number of man-days of on-shore senior resources</description>
        <label>On-shore senior resources (man-days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_RMS_value__c</fullName>
        <description>Cost incurred if relocation of resources is applicable</description>
        <label>RMS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Resources_Efforts__c</fullName>
        <label>Resources Efforts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Senior_resources_man_days__c</fullName>
        <description>Number of man-days for resources between L1 to L2 &amp; L6 to L8</description>
        <label>Senior resources (man-days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Target_Blend_Rate__c</fullName>
        <description>Project services target blend</description>
        <label>Target Blend Rate*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_Expenses_of_CR__c</fullName>
        <label>Total Expenses of CR</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_Resource_Cost_CR__c</fullName>
        <label>Total Resource Cost CR</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_Resource_Efforts_CR__c</fullName>
        <label>Total Resource Efforts CR</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_charge_of_CR__c</fullName>
        <description>Total charges of the CR</description>
        <label>Total Charge of CR*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Varied_Target_Blend_Rate__c</fullName>
        <description>Project services target blend</description>
        <label>Varied Target Blend Rate*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pec_Estimated_Off_shore__c</fullName>
        <description>Estimated percentage of off-shore resources</description>
        <label>Estimated Off-shore %*</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pec_Estimated_On_shore__c</fullName>
        <description>Estimated percentage of on-shore resources</description>
        <label>Estimated On-shore %*</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pec_Expense__c</fullName>
        <description>Percentage of expenses incurred under the PWO</description>
        <label>Expense %*</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>per_Variance__c</fullName>
        <label>Variance %*</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pkl_Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Currency__c</fullName>
        <description>Currency of the charges/costs</description>
        <label>Currency*</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWODelta_Project_Classification__c</fullName>
        <label>Project Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Complexity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Augmentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWORFDelta_Landscape__c</fullName>
        <label>Landscape</label>
        <picklist>
            <picklistValues>
                <fullName>Cordillera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWORFDelta_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWORFDelta_Process_Office_Area_E2E__c</fullName>
        <label>Process Office area E2E</label>
        <picklist>
            <picklistValues>
                <fullName>S&amp;OP (Demand Management / Operations Planning)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order To Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make To Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control To Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close To Report (Management ac / Finance ac)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Data Lifecycle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWORFDelta_Project_Scale__c</fullName>
        <label>Project Scale</label>
        <picklist>
            <picklistValues>
                <fullName>Large Project (&gt;2000 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Project (500 - 2000 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Complexity Project (50 - 100 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Project (&lt;50 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_PWORFDelta_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Work Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scope Change (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Secondment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Phase_change_record_raised__c</fullName>
        <description>Phase in which a change record has been made</description>
        <label>Phase Change Record Raised*</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pkl_Project_Phases__c</fullName>
        <description>Phases of project covered by PWO</description>
        <label>Project Phases*</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pkl_Status__c</fullName>
        <description>Auto generated based on user actions</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txtPWORFDelt_UnileverFinanceBPContactnam__c</fullName>
        <label>Unilever Finance BP/Contact name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Accenture_Project_Manager__c</fullName>
        <description>Name of Accenture Project Manager</description>
        <label>Vendor Project Manager*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Change_Record_number__c</fullName>
        <description>CR ID</description>
        <label>Change Record Number*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_For_Search__c</fullName>
        <description>This field is used internally, for search purpose.</description>
        <label>For Search</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Internal_CR_ID__c</fullName>
        <description>This field is to store auto generated internal CR ID. Will be used for searching purpose.</description>
        <label>Internal CR ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Currency__c</fullName>
        <label>Other Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_PWORFDelta_Request_Type__c</fullName>
        <label>Other Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Phase_change_record_raised__c</fullName>
        <label>Other Phase change record raised</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Project_Phases__c</fullName>
        <label>Other Project Phases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWODelta_Accenture_Project_Manager__c</fullName>
        <label>Accenture Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWODelta_Other_Billing_Details__c</fullName>
        <label>Other Billing Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWODelta_Other_Innovation_Area__c</fullName>
        <label>Other Unilever Innovation Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWORFDeltaUnileverprojectmanagerName__c</fullName>
        <label>Unilever project manager name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWORFDelta_Cost_Centre__c</fullName>
        <label>Cost Center Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_PWORFDelta_Project_requestor_name__c</fullName>
        <label>Project requestor name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Previous_Status_Value__c</fullName>
        <label>Previous Status Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>